[package]
name = "composite-hkx-conversion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
eframe = "0.32.0"
egui_extras = "0.32.0"
encoding_rs = "0.8.35"
futures = "0.3.31"
rfd = "0.15.4"
serde_hkx_features = { git = "https://github.com/beefclot/serde-hkx", rev = "39062a5", default-features = false }
tempfile = "3.20"
tokio = { version = "1.47.1", features = [
  "process",
  "rt",
  "rt-multi-thread",
  "macros",
  "sync",
] }
walkdir = "2.5.0"
winres = "0.1.12"


[build-dependencies]
winres = "0.1"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
